[project]
name = "quickstart-openrouter"
version = "0.2.0"
description = "Address book agent with LangGraph and OpenRouter"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3",
    "langchain-openrouter>=0.1",
    "langgraph>=0.2",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
]

[project.scripts]
addresses = "main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["addresses", "main.py"]
